--- a/style.css
+++ b/style.css
@@ -2,3 +2,44 @@
     padding: 0;
     margin: 0;
 }
+/* common */
+.inter{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+}
+
+
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-height: 92px;
+    margin: 19px 120px;
+}
+
+.header ul{
+      display: flex;
+      gap: 30px;
+      list-style: none;
+}
+
+.banner{
+    background-image: url("./assets/hero-bg.png");
+    background-repeat: no-repeat; 
+    background-size: cover;      
+    background-attachment: fixed;
+    height: 1370px;
+}
+
+.hero-section{
+    height: 100vh;
+    text-align: center;
+    justify-content: center;
+}
+.hero-section p{
+color: white;
+}
+
+.hero-section .h1{
+    color: white;
+}
