--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
   font-optical-sizing: auto;
 }
 
+p{
+    color: #627382;
+
+}
+
 
 .header{
     display: flex;
@@ -56,7 +61,7 @@ color: white;
 /* start node-section */
 /* ------------------------ */
 .node-section{
-    margin: 25px 120px;
+    margin: 20px 120px;
 }
 .node{
     text-align: center;
@@ -67,3 +72,33 @@ color: white;
 .node p{
     color: #627382;
 }
+
+/* common section for card */
+.card-section{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.card{
+    width: 320px;
+    height: 300px;
+    text-align: center;
+    box-sizing: border-box;
+    padding: 25px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 50px;
+    box-shadow: 5px 5px 10px #888888;
+}
+.card img{
+    background-color: #F95555;
+    background-size: 60px 60px;
+    height: 32px;
+    width: 32px;
+    border-radius: 180px;
+}
+/*End common section for card */
