--- a/style.css
+++ b/style.css
@@ -17,8 +17,12 @@ p{
     border-radius: 4px;
     width: 185px;
     height: 45px;
+    cursor: pointer;
 }
-
+.btn:hover{
+    background-color: #36e080;
+    color: rgb(1, 14, 8);
+}
 
 .header{
     display: flex;
@@ -125,6 +129,14 @@ color: white;
     display: flex;
     margin: 120px 120px;
     gap: 60px;
+}
+
+.brain-contain .bp{
+    color: #30B868;
+    font-size: 16px;
+}
+.brain-contain strong{
+    font-size: 48px;
 }
 
 .brain-contain{
