--- a/style.css
+++ b/style.css
@@ -24,6 +24,22 @@ p{
     color: rgb(1, 14, 8);
 }
 
+.btn-t:hover{
+    background-color: #36e080;
+    color: rgb(1, 14, 8);
+}
+
+
+.btn-t{
+    background-color: transparent;
+    color: white;
+    border-radius: 4px;
+    width: 185px;
+    height: 45px;
+    cursor: pointer;
+    border:2px solid #F7F6F2;
+}
+
 .header{
     display: flex;
     align-items: center;
@@ -48,16 +64,6 @@ p{
     height: 670px;
     max-width: 1700px;
 }
-.hs h3{
-    color: #30B868;
-    background-color: white;
-    border-radius: 30px;
-   
-}
-/* .hero{
-    border: 2px solid green;
-} */
-
 
 .hero-section{
     display: flex;
@@ -70,12 +76,25 @@ p{
     padding: 150px 120px 134px 120px;
     
 }
+.hero-section h6{
+    color: #36e080;
+    border-radius: 50px;
+    background-color: white;
+    width: 200px;
+    margin: 0px auto;
+}
 .hero-section p{
 color: white;
 }
 
+.hero-section .h1{
+    color: white;
+    font-size: 48px;
+}
+
 .hero-section .h2{
     color: #30B868;
+    font-size: 48px;
 }
 
 /* End */
@@ -178,6 +197,16 @@ color: white;
     align-items: center;
 
     padding: 80px 0px 120px 0px;
+}
+.social-icon{
+    color: white;
+    text-align: right;
+    margin: 0px;
+    margin-right: 120px;
+}
+
+.footer p{
+    color: white;
 }
 
 .footer-line{
