--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ p{
     background-size: cover;      
     background-attachment: fixed;
     height: 670px;
-    max-width: 1700px;
+    max-width: 1600px;
 }
 
 .hero-section{
@@ -71,7 +71,7 @@ p{
     gap: 25px;
     box-sizing: border-box;
     height: 670px;
-    width: 1600px;
+    max-width: 1600px;
     text-align: center;
     padding: 150px 120px 134px 120px;
     
@@ -115,11 +115,11 @@ color: white;
 
 /* common section for card */
 .card-section{
-    margin-top: 120px;
-    margin-bottom: 120px;
+     margin: 120px 120px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 10px;
+    max-width: 1600px;
 }
 
 .card{
@@ -148,6 +148,7 @@ color: white;
     display: flex;
     margin: 120px 120px;
     gap: 60px;
+    max-width: 1600px;
 }
 
 .brain-contain .bp{
@@ -190,12 +191,12 @@ color: white;
 .footer{
     background-color: #001931;
     height: 350px;
+    max-width: 1600px;
 }
 .footer-section{
     display: flex;
     justify-content: space-around;
     align-items: center;
-
     padding: 80px 0px 120px 0px;
 }
 .social-icon{
