--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ color: white;
     margin: 120px 120px;
     box-sizing: border-box;
     padding: 80px;
+    max-width: 1600px;
 
 }
 .early-access strong{
@@ -214,8 +215,9 @@ color: white;
     width: 1360px;
     height: 1px;
     background-color: #2a5a86;
-    margin-left: 120px;
+    margin: 0px 120px;
     margin-bottom: 30px;
+    max-width: 1600px;
 }
 
 .end-footer{
